exploring dga modeling
exploring dga modeling

making optimizations

removing large model